--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   cloud_firestore:
+  flutter_spinkit:
   google_fonts_arabic:
   flutter_staggered_grid_view:
   flutter_localizations:
