--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_svg:
   google_sign_in:
   sign_button:
+  google_fonts:
+  font_awesome_flutter:
   google_fonts_arabic:
   flutter_staggered_grid_view:
   flutter_localizations:
