--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_svg:
   google_sign_in:
   sign_button:
+  device_preview:
   google_fonts:
   font_awesome_flutter:
   google_fonts_arabic:
