--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,13 +57,14 @@ dev_dependencies:
     sdk: flutter
 
 dependency_overrides:
-  intl:
+  intl: ^0.17.0-nullsafety.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+ # generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
