--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ if (localPropertiesFile.exists()) {
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
 if (flutterRoot == null) {
-    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+    throw FileNotFoundException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
@@ -28,7 +28,6 @@ if (keystorePropertiesFile.exists()) {
 }
 
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -45,27 +44,42 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.techlearnprojectapp"
+        applicationId "com.techlearnprojectapp"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        multiDexEnabled  true
     }
 
-    signingConfigs {
-        release {
-            keyAlias keystoreProperties['key']
-            keyPassword keystoreProperties['Kontermeaway?']
-            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
-            storePassword keystoreProperties['Kontermeaway?']
-        }
+//    signingConfigs {
+//        release {
+//            keyAlias keystoreProperties['key']
+//            keyPassword keystoreProperties['Kontermeaway?']
+//            storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+//            storePassword keystoreProperties['Kontermeaway?']
+//        }
+
+        signingConfigs {
+            release {
+                storeFile file("/Users/yehyatt/AndroidStudioProjects/Keys/TechLearnKey.jks") //check that the file exists
+                storePassword "Kontermeaway?"
+                keyAlias "key"
+                keyPassword "Kontermeaway?"
+            }
+
+
     }
     buildTypes {
         release {
             signingConfig signingConfigs.release
-//            signingConfig signingConfigs.debug
+            //signingConfig signingConfigs.debug
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 }
 
