--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,33 +1,32 @@
-
-    buildscript {
-        ext.kotlin_version = '1.3.50'
-        repositories {
-            google()
-            jcenter()
-        }
-
-        dependencies {
-            classpath 'com.android.tools.build:gradle:4.1.1'
-            classpath 'com.google.gms:google-services:4.3.4'
-            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        }
+buildscript {
+    ext.kotlin_version = "1.4.31"
+    repositories {
+        google()
+        jcenter()
     }
 
-    allprojects {
-        repositories {
-            google()
-            jcenter()
-        }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.google.gms:google-services:4.3.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
+}
 
-    rootProject.buildDir = '../build'
-    subprojects {
-        project.buildDir = "${rootProject.buildDir}/${project.name}"
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
-    subprojects {
-        project.evaluationDependsOn(':app')
-    }
+}
 
-    task clean(type: Delete) {
-        delete rootProject.buildDir
-    }
+rootProject.buildDir = '../build'
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+}
+subprojects {
+    project.evaluationDependsOn(':app')
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
